--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" style="padding-left: 50px;" href='about_us.html'>About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" style="padding-left: 50px;" href='#'>Contact Us</a>
+                        <a class="nav-link" style="padding-left: 50px;" href='contact_us.html'>Contact Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" style="padding-left: 50px;" href='#' role="button" data-bs-toggle="dropdown">Game</a>
