--- a/Pages/index.html
+++ b/Pages/index.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 
-            <div class="container-fluid">
+            <div id="nav-links" class="container-fluid">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" style="padding-left: 50px;" href='index.html'>Home</a>
@@ -60,8 +60,9 @@
     <br><br>
     <div class="tales_of_adventure_preview">
         <div class="tales_of_adventure_preview_text">
-            <h3="tales_of_adventure_preview_heading">Tales of Adventure</h3>
-                <p>The top-down adventure game where you are in control</p>
+            <h3="tales_of_adventure_preview_heading">Introducing</h3>
+                <p>Your name is Mathew, you are a knight who must fight his way through countless enemies, boss monsters and solve puzzles, in the name of his country
+                </p>
         </div>
         <div class="tales_of_adventure_preview_image">
             <img src="../assets/sprites/background.png" width="500" height="400">
@@ -73,8 +74,8 @@
             <img src="../assets/sprites/background.png" width="300" height="200">
         </div>
         <div class="tales_of_adventure_preview_text">
-            <h3="tales_of_adventure_preview_heading">Tales of Adventure</h3>
-                <p>The top-down adventure game where you are in control</p>
+            <h3="tales_of_adventure_preview_heading">Puzzles</h3>
+                <p>Solve puzzles to aid Mathew in his journey</p>
         </div>
     </div>
     <br><br>
@@ -89,4 +90,31 @@
     </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <script src="../assets/js/web/button.js"></script>
+
+    <footer id="footer" class="footer-1">
+        <div class="main-footer widgets-dark typo-light">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="widget subscribe no-box">
+                            <h5 class="widget-title">Web Development Group F<span></span></h5>
+                            <p>We are a two person group for web development at University of the West of Scotland </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <p>Copyright © 2021. All rights reserved.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
