changes to background.png

--- a/Pages/contact_us.html
+++ b/Pages/contact_us.html
@@ -52,7 +52,7 @@
     <br>
     <div class="card" style="width: 80rem; margin: 0 auto;">
         <h3 class="tales_of_adventure_preview_text">Our Mission Statement</h3>
-        <p>
+        <p class="tales_of_adventure_preview_text">
             We are a Web Development team and students at the University of the West of Scotland.
             <br>
             <div class="container">
@@ -86,6 +86,33 @@
             </div>
         </p>
     </div>
+    <br><br><br>
+    <footer id="footer" class="footer-1">
+        <div class="main-footer widgets-dark typo-light">
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="widget subscribe no-box">
+                            <h5 class="widget-title">Web Development Group F<span></span></h5>
+                            <p>We are a two person group for web development at University of the West of Scotland </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <p>Copyright © 2021. All rights reserved.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <script src="../assets/js/web/button.js"></script>
 </body>
