added aimee contact details and about

--- a/Pages/about_us.html
+++ b/Pages/about_us.html
@@ -64,7 +64,8 @@
                         <p>About Aimee</p>
                         <h5 class="tales_of_adventure_preview_text">Project Developer</h5>
                         <p>Hello! My name is Aimee Lennon!</p>
-                        <p></p>
+                        <p>Hiya, I'm currently a 3rd year student at the University of the West of Scotland. I have a big passion for video games and want to continue with it into game creation. I hope to one day work for the company that gave me my favourite
+                            RPG games!</p>
                     </div>
                 </div>
             </div>
