--- a/Pages/contact_us.html
+++ b/Pages/contact_us.html
@@ -75,11 +75,11 @@
                         <p>Contact Aimee</p>
                         <h5 class="tales_of_adventure_preview_text">Project Developer</h5>
                         <p>Hello! My name is Aimee Lennon!</p>
-                        <a class="btn btn-primary" style="background-color: #55acee;" target="_blank" href="https://twitter.com/DonberryTonbrry">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a class="btn btn-primary" style="background-color: #0082ca;" target="_blank" href="https://www.linkedin.com/in/mark-clyne-171063222/">
+                        <a class="btn btn-primary" style="background-color: #0082ca;" target="_blank" href="https://www.linkedin.com/in/aim%C3%A9e-elizabeth-lennon-4a54b61ba/">
                             <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a class="btn btn-primary" style="background-color: #0082ca;" target="_blank" href="https://discordapp.com/users/417764518811271168">
+                            <i class="fab fa-discord"></i>
                         </a>
                     </div>
                 </div>
