townscene and images

--- a/Pages/game.html
+++ b/Pages/game.html
@@ -10,7 +10,7 @@
     <link href="../assets/css/style.css" rel="stylesheet">
 
     <script src="../node_modules/phaser/dist/phaser.min.js"></script>
-    <script type="module" src="../assets/js/game/intro.js"></script>
+    <script type="module" src="../assets/js/game/mainmenu.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 
