--- a/Pages/index.html
+++ b/Pages/index.html
@@ -46,7 +46,7 @@
     <br>
     <div class="tales_of_adventure_preview">
         <div class="tales_of_adventure_preview_image">
-            <img src="../assets/sprites/background.png" width="300" height="200">
+            <img class="tales_of_adventure_preview_image" src="../assets/sprites/background.png" width="300" height="200">
         </div>
         <div class="tales_of_adventure_preview_text">
             <h3="tales_of_adventure_preview_heading">Tales of Adventure</h3>
@@ -61,7 +61,7 @@
                 </p>
         </div>
         <div class="tales_of_adventure_preview_image">
-            <img src="../assets/sprites/background.png" width="500" height="400">
+            <img class="tales_of_adventure_preview_image" src="../assets/sprites/background.png" width="500" height="400">
         </div>
     </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
