--- a/Pages/index.html
+++ b/Pages/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="description" content="Home - Web Game Development">
     <meta name="authors" content="Mark Clyne, Aimee Lennon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
     <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script defer src="../node_modules/@fortawesome/fontawesome-free/js/brands.js"></script>
+    <script defer src="../node_modules/@fortawesome/fontawesome-free/js/solid.js"></script>
+    <script defer src="../node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
 
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -16,9 +19,9 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <nav id="content-desktop" class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 
-            <div id="nav-links" class="container-fluid">
+            <div class="container-fluid">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" style="padding-left: 50px;" href='index.html'>Home</a>
@@ -39,7 +42,25 @@
                 </ul>
             </div>
         </nav>
+        <nav id="content-mobile" class="top-nav">
+
+            <a href="javascript:void(0);" class="icon" onclick="burgerFunction()">
+                <i class="fa fa-bars"></i></a>
+            <div id="myLinks" style="display: none;">
+                <a class="nav-link" style="padding-left: 50px;" href='index.html'>Home</a>
+                <a class="nav-link" style="padding-left: 50px;" href='about_us.html'>About Us</a>
+                <a class="nav-link" style="padding-left: 50px;" href='contact_us.html'>Contact Us</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" style="padding-left: 50px;" href='#' role="button" data-bs-toggle="dropdown">Game</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href='game.html'>Play Game</a></li>
+                        <li><a class="dropdown-item" href='#'>How to Play</a></li>
+                        <li><a class="dropdown-item" href='about_the_game.html'>About the Game</a></li>
+                    </ul>
+            </div>
+        </nav>
     </header>
+
     <div class="hero-image">
     </div>
 
@@ -61,7 +82,7 @@
                 </p>
         </div>
         <div class="tales_of_adventure_preview_image">
-            <img class="tales_of_adventure_preview_image" src="../assets/sprites/background.png" width="500" height="400">
+            <img class="tales_of_adventure_preview_image" src="../assets/sprites/background.png" width="300" height="200">
         </div>
     </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
@@ -95,4 +116,7 @@
             </div>
         </div>
     </footer>
+    <script src="../assets/js/web/button.js"></script>
+    <script src="../assets/js/web/collapsible.js"></script>
+    <script src="../assets/js/web/burgerbutton.js"></script>
 </body>
