--- a/Pages/game.html
+++ b/Pages/game.html
@@ -14,8 +14,6 @@
 
     <script src="../node_modules/phaser/dist/phaser.min.js"></script>
 
-    <script type="module" src="../assets/js/game/intro.js"></script>
-
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 
@@ -68,8 +66,8 @@
         <div class="hero-text">
         </div>
     </div>
-    <div id="game">
-
+    <div class="tales_of_adventure_preview" id="game">
+        <script type="module" src="../assets/js/game/intro.js"></script>
     </div>
     <div id="content-mobile">
         <div id="gameWarning" style="margin-left: 120px; color:white;">Please use landscape</div>
