dungeon scenes added

--- a/Pages/how_to_play.html
+++ b/Pages/how_to_play.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Home - Web Game Development">
+    <meta name="description" content="About The Game - Web Game Development">
     <meta name="authors" content="Mark Clyne, Aimee Lennon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -60,51 +60,62 @@
             </div>
         </nav>
     </header>
-    <div class="hero-image">
+
+    <div class="hero-image" style="scale: 0.8;">
         <div class="hero-text">
+
         </div>
     </div>
+
     <br>
-    <div id="content-desktop" class="card" style="width: 80rem; margin: 0 auto;">
-        <h3 class="tales_of_adventure_preview_text">Our Mission Statement</h3>
-        <p class="tales_of_adventure_preview_text">
-            We are a Web Development team and students at the University of the West of Scotland.
-            <br>
-            <div class="container">
-                <div class="row">
-                    <div class="col-4">
-                        <p>About Mark</p>
-                        <h5 class="tales_of_adventure_preview_text">Project Developer</h5>
-                        <p>Hello! My name is Mark Clyne!</p>
-                        <p>I am a 3rd Year student at the University of the West of Scotland. My passion is video games. I hope that one day, I can deliver an experience to gamers that developers have delivered to me, in the past. I would one day like to
-                            work on a large-scale MMORPG.</p>
-                    </div>
-                    <div class="col-4">
-                        <p>About Aimee</p>
-                        <h5 class="tales_of_adventure_preview_text">Project Developer</h5>
-                        <p>Hello! My name is Aimee Lennon!</p>
-                        <p>Hiya, I'm currently a 3rd year student at the University of the West of Scotland. I have a big passion for video games and want to continue with it into game creation. I hope to one day work for the company that gave me my favourite
-                            RPG games!</p>
-                    </div>
-                </div>
-            </div>
-        </p>
+    <div class="tales_of_adventure_preview">
+        <div class="tales_of_adventure_preview_image">
+            <img class="tales_of_adventure_preview_image" src="../assets/images/interact.png" width="500" height="400">
+        </div>
+        <div class="tales_of_adventure_preview_text">
+            <h3="tales_of_adventure_preview_heading">Interacting</h3>
+                <p>To interact with an NPC, hold the arrow key towards them and press Enter
+                </p>
+        </div>
     </div>
-    <button type="button" id="content-mobile" class="collapsible">Learn about Mark</button>
-    <div class="content" id="content-mobile">
-        <p>Hello! My name is Mark Clyne!</p>
-        <p>I am a 3rd Year student at the University of the West of Scotland. My passion is video games. I hope that one day, I can deliver an experience to gamers that developers have delivered to me, in the past. I would one day like to work on a large-scale
-            MMORPG.
-        </p>
+    <br><br>
+    <div class="tales_of_adventure_preview">
+        <div class="tales_of_adventure_preview_text">
+            <h3="tales_of_adventure_preview_heading">Movement</h3>
+                <p>Using the arrow keys on your keyboard, you can move Mathew around the world
+                </p>
+        </div>
+        <div class="tales_of_adventure_preview_image">
+            <img class="tales_of_adventure_preview_image" src="../assets/images/movement.gif" height="200">
+        </div>
     </div>
-    <button type="button" id="content-mobile" class="collapsible">Learn about Aimee</button>
-    <div class="content" id="content-mobile">
-        <p>Hello! My name is Aimee Lennon!</p>
-        <p>Hiya, I'm currently a 3rd year student at the University of the West of Scotland. I have a big passion for video games and want to continue with it into game creation. I hope to one day work for the company that gave me my favourite RPG games!</p>
+    <br><br>
+    <div class="tales_of_adventure_preview">
+        <div class="tales_of_adventure_preview_image">
+            <img class="tales_of_adventure_preview_image" src="../assets/images/advance.png" width="500" height="400">
+        </div>
+        <div class="tales_of_adventure_preview_text">
+            <h3="tales_of_adventure_preview_heading">Advance Text</h3>
+                <p>By clicking the black box, the text will advance.</p>
+        </div>
     </div>
+    <br><br>
+    <div class="tales_of_adventure_preview">
+        <div class="tales_of_adventure_preview_text">
+            <h3="tales_of_adventure_preview_heading">Puzzles</h3>
+                <p>Using your mouse cursor, holding left mouse button will allow you to drag</p>
+                <p>the gems to make a match.</p>
+        </div>
+        <div class="tales_of_adventure_preview_image">
+            <img class="tales_of_adventure_preview_image" src="../assets/images/puzzle.gif" width="500" height="400">
+        </div>
+    </div>
+    <br><br>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <script src="../assets/js/web/button.js"></script>
+
+    <br><br>
+
     <script src="../assets/js/web/burgerbutton.js"></script>
-    <script src="../assets/js/web/collapsible.js"></script>
 </body>
