--- a/Pages/contact_us.html
+++ b/Pages/contact_us.html
@@ -36,7 +36,7 @@
                         <a class="nav-link dropdown-toggle" style="padding-left: 50px;" href='#' role="button" data-bs-toggle="dropdown">Game</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href='game.html'>Play Game</a></li>
-                            <li><a class="dropdown-item" href='#'>How to Play</a></li>
+                            <li><a class="dropdown-item" href='how_to_play.html'>How to Play</a></li>
                             <li><a class="dropdown-item" href='about_the_game.html'>About the Game</a></li>
                         </ul>
                 </ul>
@@ -54,7 +54,7 @@
                     <a class="nav-link dropdown-toggle" style="padding-left: 50px;" href='#' role="button" data-bs-toggle="dropdown">Game</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href='game.html'>Play Game</a></li>
-                        <li><a class="dropdown-item" href='#'>How to Play</a></li>
+                        <li><a class="dropdown-item" href='how_to_play.html'>How to Play</a></li>
                         <li><a class="dropdown-item" href='about_the_game.html'>About the Game</a></li>
                     </ul>
             </div>
@@ -125,33 +125,7 @@
             <i class="fab fa-discord"></i>
         </a>
     </div>
-    <br><br><br>
-    <footer class="footer-1">
-        <div class="main-footer widgets-dark typo-light">
-            <div class="container">
-                <div class="row">
 
-                    <div class="col-xs-12 col-sm-6 col-md-3">
-                        <div class="widget subscribe no-box">
-                            <h5 class="widget-title">Web Development Group F<span></span></h5>
-                            <p>We are a two person group for web development at University of the West of Scotland </p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="footer-copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <p>Copyright © 2021. All rights reserved.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <script src="../assets/js/web/button.js"></script>
     <script src="../assets/js/web/collapsible.js"></script>
