--- a/Pages/game.html
+++ b/Pages/game.html
@@ -38,7 +38,7 @@
                         <a class="nav-link dropdown-toggle" style="padding-left: 50px;" href='#' role="button" data-bs-toggle="dropdown">Game</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href='game.html'>Play Game</a></li>
-                            <li><a class="dropdown-item" href='#'>How to Play</a></li>
+                            <li><a class="dropdown-item" href='how_to_play.html'>How to Play</a></li>
                             <li><a class="dropdown-item" href='about_the_game.html'>About the Game</a></li>
                         </ul>
                 </ul>
@@ -56,7 +56,7 @@
                     <a class="nav-link dropdown-toggle" style="padding-left: 50px;" href='#' role="button" data-bs-toggle="dropdown">Game</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href='game.html'>Play Game</a></li>
-                        <li><a class="dropdown-item" href='#'>How to Play</a></li>
+                        <li><a class="dropdown-item" href='how_to_play.html'>How to Play</a></li>
                         <li><a class="dropdown-item" href='about_the_game.html'>About the Game</a></li>
                     </ul>
             </div>
