--- a/Pages/about_the_game.html
+++ b/Pages/about_the_game.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script defer src="../node_modules/@fortawesome/fontawesome-free/js/brands.js"></script>
+    <script defer src="../node_modules/@fortawesome/fontawesome-free/js/solid.js"></script>
+    <script defer src="../node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
 
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -16,9 +19,9 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <nav id="content-desktop" class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 
-            <div id="nav-links" class="container-fluid">
+            <div class="container-fluid">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" style="padding-left: 50px;" href='index.html'>Home</a>
@@ -33,10 +36,27 @@
                         <a class="nav-link dropdown-toggle" style="padding-left: 50px;" href='#' role="button" data-bs-toggle="dropdown">Game</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href='game.html'>Play Game</a></li>
-                            <li><a class="dropdown-item" href='#'>How to Play</a></li>
+                            <li><a class="dropdown-item" href='how_to_play.html'>How to Play</a></li>
                             <li><a class="dropdown-item" href='about_the_game.html'>About the Game</a></li>
                         </ul>
                 </ul>
+            </div>
+        </nav>
+        <nav id="content-mobile" class="top-nav">
+
+            <a href="javascript:void(0);" class="icon" onclick="burgerFunction()">
+                <i class="fa fa-bars"></i></a>
+            <div id="myLinks" style="display: none;">
+                <a class="nav-link" style="padding-left: 50px;" href='index.html'>Home</a>
+                <a class="nav-link" style="padding-left: 50px;" href='about_us.html'>About Us</a>
+                <a class="nav-link" style="padding-left: 50px;" href='contact_us.html'>Contact Us</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" style="padding-left: 50px;" href='#' role="button" data-bs-toggle="dropdown">Game</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href='game.html'>Play Game</a></li>
+                        <li><a class="dropdown-item" href='how_to_play.html'>How to Play</a></li>
+                        <li><a class="dropdown-item" href='about_the_game.html'>About the Game</a></li>
+                    </ul>
             </div>
         </nav>
     </header>
@@ -128,33 +148,9 @@
     </div>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <script src="../assets/js/web/button.js"></script>
+    <script src="../assets/js/web/burgerbutton.js"></script>
 
     <br><br>
 
-    <footer id="footer" class="footer-1">
-        <div class="main-footer widgets-dark typo-light">
-            <div class="container">
-                <div class="row">
 
-                    <div class="col-xs-12 col-sm-6 col-md-3">
-                        <div class="widget subscribe no-box">
-                            <h5 class="widget-title">Web Development Group F<span></span></h5>
-                            <p>We are a two person group for web development at University of the West of Scotland </p>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="footer-copyright">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <p>Copyright © 2021. All rights reserved.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
 </body>
