--- a/Pages/about_the_game.html
+++ b/Pages/about_the_game.html
@@ -83,25 +83,8 @@
     </div>
     <br><br>
     <div class="tales_of_adventure_preview">
-        <div class="tales_of_adventure_preview_text">
-            <h3="tales_of_adventure_preview_heading">Controls</h3>
-                <p>With both touch and key controls, you choose how you experience your adventure in Aetheria.
-                </p>
-                <p>
-                    Key controls with ultilise WASD/Arrow keys
-                </p>
-                <p>
-                    Touch controls will use an onscreen d-pad and action buttons
-                </p>
-        </div>
         <div class="tales_of_adventure_preview_image">
-            <img class="tales_of_adventure_preview_image" src="https://aws1.discourse-cdn.com/free1/uploads/phaser1/original/2X/3/33b0c3cfd27da5251cfb6fd5366f65be75721478.png" height="200">
-        </div>
-    </div>
-    <br><br>
-    <div class="tales_of_adventure_preview">
-        <div class="tales_of_adventure_preview_image">
-            <img class="tales_of_adventure_preview_image" src="https://hips.hearstapps.com/vader-prod.s3.amazonaws.com/1585938339-91LHQjMyEUL._SL500_.jpg?crop=1.00xw:0.562xh;0,0.438xh&resize=768:*" width="500" height="400">
+            <img class="tales_of_adventure_preview_image" src="../assets/images/advance.png" width="500" height="400">
         </div>
         <div class="tales_of_adventure_preview_text">
             <h3="tales_of_adventure_preview_heading">Gameplay</h3>
@@ -114,10 +97,11 @@
         <div class="tales_of_adventure_preview_text">
             <h3="tales_of_adventure_preview_heading">Art Design</h3>
                 <p>Tales of Adventure uses 2D sprites and spritesheets for animation.</p>
-                <p></p>
+                <p>These sprites were created using Pipoya Character Sprite 32 Generator which includes animation frames</p>
+                <a href="https://pipoya.itch.io/pipoya-free-rpg-character-sprites-32x32">Found here</a>
         </div>
         <div class="tales_of_adventure_preview_image">
-            <img class="tales_of_adventure_preview_image" src="https://thumbs.dreamstime.com/z/animated-knight-character-sprites-animated-sprites-knight-character-creating-fantasy-rpg-adventure-video-games-116939824.jpg" width="500" height="400">
+            <img class="tales_of_adventure_preview_image" src="../assets/sprites/Player Sprites/erian.png" width="500" height="400">
         </div>
     </div>
     <br><br>
@@ -128,6 +112,9 @@
         <div class="tales_of_adventure_preview_text">
             <h3="tales_of_adventure_preview_heading">Sound Design</h3>
                 <p>Tales of Adventure uses a chiptune soundtrack</p>
+                <p>These tracks were generated using AIVA, influenced by simple melodies written by us</p>
+                <a href="https://www.aiva.ai/">You can find AIVA here</a>
+                <br><br>
                 <audio controls>
                     <source src="../assets/audio/intro.WAV" type="audio/WAV">
                 </audio>
@@ -141,6 +128,8 @@
         <div class="tales_of_adventure_preview_text">
             <h3="tales_of_adventure_preview_heading">Game Engine</h3>
                 <p>Tales of Adventure is being developed using the Phaser 3 game framework, a JavaScript based Game Engine.</p>
+                <p>More information on the Phaser game development framework can be found</p>
+                <a href="https://phaser.io/">Here</a>
         </div>
         <div class="tales_of_adventure_preview_image">
             <img class="tales_of_adventure_preview_image" src="../assets/sprites/tutorial_header.png" width="500" height="400">
